--- a/WASM/BPMNEditor.Client/BPMNEditor.Client.csproj
+++ b/WASM/BPMNEditor.Client/BPMNEditor.Client.csproj
@@ -1,9 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
+    <StaticWebAssetProjectMode>Default</StaticWebAssetProjectMode>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -22,26 +24,24 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.6" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.6" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
   </ItemGroup>
-	
-    <ItemGroup>
-    <Compile Remove="Pages\DiagramOpenDialog.cs" />
-  </ItemGroup>
+
   <ItemGroup>
-    <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
-	<PackageReference Include="Markdig" Version="0.23.0" />
+    <PackageReference Include="System.Net.Http.Json" Version="8.0.0" />
+	  <PackageReference Include="Markdig" Version="0.23.0" />
   </ItemGroup>
-<ItemGroup>
+
+ <ItemGroup>
     <None Include="wwwroot\css\bootstrap\bootstrap.min.css.map" />
     <None Include="wwwroot\css\open-iconic\FONT-LICENSE" />
     <None Include="wwwroot\css\open-iconic\font\fonts\open-iconic.svg" />
     <None Include="wwwroot\css\open-iconic\ICON-LICENSE" />
     <None Include="wwwroot\css\open-iconic\README.md" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\common\BlazorWasmCommon_NET6.csproj" />
-  </ItemGroup>
+
+ <ItemGroup>
+   <ProjectReference Include="..\..\common\BlazorWasmCommon_NET8.csproj" />
+ </ItemGroup>
 
 </Project>
