--- a/WASM/BpmnEditor/NuGet.config
+++ b/WASM/BpmnEditor/NuGet.config
@@ -3,6 +3,7 @@
   <packageSources>
     <clear />
     <add key="NuGet.org" value="https://api.nuget.org/v3/index.json" />
+    <!-- Resources -->
   </packageSources>
   <config>
     <add key="dependencyVersion" value="Highest" />
